styles/main.css
/* ... */
.section-title {
    font-weight: bolder;
}

.section-subtitle {
    font-weight: bold;
}

.section-title.day {
    color: var(--TitleDay);
}

.section-subtitle.day {
    color: var(--subTitleDay);
}

.section-desc.day {
    color: var(--textDay);
}

.section-title.night {
    color: var(--TitleNight);
}

.section-subtitle.night {
    color: var(--subTitleNight);
}

.section-desc.night {
    color: var(--textNight);
}

.bio-sections {
    margin: 5px 0;
}

/* Error handling for course grid */
@media screen and (max-width: 400px) {
    .courses-wrapper {
        grid-template-columns: repeat(auto-fit, 100%);
    }

    #edu-title {
        font-size: 30px;
    }

    #edu-ico {
        width: 50px;
        height: 50px;
    }
}

@media screen and (min-width: 788px) {
    .top-menu {
        max-height: 0%;
        visibility: hidden;
    }
}

/* Mobile View */
@media screen and (max-width: 787px) {
    .tabs-toggle {
        display: none;
    }

    .tab-hamburger {
        display: block;
        cursor: pointer;
        transition: all ease 300ms;
        padding: 3px 6px 1px 6px;
        border-radius: 3px;
    }

    .tab-hamburger.night:hover {
        background-color: var(--activeTabColorNight);
        color: rgb(255, 191, 0);
    }

    .tab-hamburger.day:hover {
        background-color: var(--inactiveTabColorDayHover);
        color: white;
    }

    .tabs-wrapper {
        justify-content: left;
    }

    .page-wrapper.welcome {
        flex-direction: column;
    }

    #bio-wrapper {
        width: 90%;
        padding: 0;
        border-left: none;
        border-top: 1px solid var(--borderColor);
        text-align: center;
        margin-bottom: 20px;
        justify-content: flex-start;
    }

    #profile-pic-wrapper {
        margin: 0;
        width: 100%;
        height: auto;
    }

    #profile-pic {
        margin: auto;
        margin-top: 20px;
        margin-bottom: 20px;
        width: 10em;
        height: 10em;
    }

    .top-menu {
        width: 100%;
        background-color: #333;
        overflow: visible;
        max-height: 0;
        transition: max-height 0.5s ease;
    }

    .top-menu ul {
        list-style: none;
        padding: 0;
        margin: 0;
        background-color: rgb(34, 33, 33);
    }

    .top-menu ul li:hover {
        background-color: #5f90c5;
        color: #181818;
    }

    .top-menu ul li {
        padding: 15px;
        text-align: center;
        border-bottom: 1px solid #b0d6ff;
        color: #fff;
        transition: background-color 200ms ease, color 200ms ease;
        cursor: pointer;
    }

    .top-menu ul li a {
        text-decoration: none;
        display: block;
    }

    .top-menu.active {
        max-height: 100%;
        visibility: visible;
    }

}

.tabs-toggle {
    padding: 3px 15px;
}

